@@ -45,6 +45,7 @@ private slots:
     void onRemove();
     void onClear();
     void onFormats();
+    void onSupportedHosts();
     void onProcStarted();
     void onProcError(QProcess::ProcessError);
     void onProcStdoutReady();
